# LE1

./: .gitignore  README.md  analytical_eigenenergies.xlsx  numerical_eigenenergies.xlsx  pyproject.toml  relative_errors.xlsx
LA1/: LA1_problem1.py  bibliography.bib  my_main.py  my_main.tex
LA1/sub_python_files/: My_Funcs.py  debye.py  diatomic_chain.py  drude.py  einstein_solid.py  qho1d.py  sommerfield_model.py
LA1/sub_tex_files/problem1/: LA1_problem1.tex
LA1/sub_tex_files/problem2/: LA1_problem2.tex
LA1/sub_tex_files/problem3/: LA1_problem3.tex
LA1/sub_tex_files/problem4/: LA1_problem4.tex
LA1/sub_tex_files/problem5/: LA1_problem5.tex
LA1/sub_tex_files/problem6/: LA1_problem6.tex
latex-template/: LA1_problem1.tex  LA1_problem2.tex  LA1_problem3.tex  LA1_problem4.tex  LA1_problem5.tex  LA1_problem6.tex  LA1_problem7.tex  LA_instructions.tex  main.tex  references.bib
src/dlsu_solst/: qho1d.py
