[project]
name = "dlsu-solst01-ay20252026t3"
version = "0.1.0"
description = "Course materials, LaTeX templates, notebooks, and resources for DLSU SOLST01 AY2025-2026 Term 3."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-4.0" }
authors = [
    { name = "Eugene Ragasa", email = "eugene@projectkoios.com" }
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "jupyter",
    "ipykernel",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mypy",
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
